--- a/ThaliTestApp/www/jxcore/package.json
+++ b/ThaliTestApp/www/jxcore/package.json
@@ -8,4 +8,9 @@
   },
   "author": "",
   "license": "ISC"
+  "dependencies": {
+    "express-pouchdb": "1.0.5-thali",
+    "leveldown-mobile": "1.1.1",
+    "pouchdb": "5.4.5"
+  }
 }
