--- a/www/jxcore/package.json
+++ b/www/jxcore/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express-pouchdb": "1.0.5-thali",
     "leveldown-mobile": "1.1.1",
-    "pouchdb": "5.4.5"
+    "pouchdb": "5.4.5",
+    "thali": "file:///Users/hiqouser/workspace/aaladev_1407/Thali_CordovaPlugin/thali"
   }
 }
