--- a/www/jxcore/package.json
+++ b/www/jxcore/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.6",
+    "express": "^4.14.0",
     "express-pouchdb": "1.0.5-thali",
     "leveldown-mobile": "1.1.1",
+    "node-uuid": "^1.4.7",
     "pouchdb": "5.4.5",
-    "thali": "file:///Users/hiqouser/workspace/aaladev_1407/Thali_CordovaPlugin/thali"
+    "proxyquire": "^1.7.10"
   }
 }
