--- a/www/jxcore/package.json
+++ b/www/jxcore/package.json
@@ -17,6 +17,8 @@
     "node-uuid": "^1.4.7",
     "pouchdb": "6.2.0",
     "proxyquire": "^1.7.10",
+    "randomstring": "1.1.5",
+    "thali": "file:///Users/Lesnik/Workspace/Webstorm/mlesnic_thaliTestApp/Thali_CordovaPlugin/thali",
     "tmp": "0.0.28"
   }
 }
